tests/NormalTests/paczka1/small_fuzzy/33239740.err
Error in line 7: lQMk3xFSg A720 2,6
Error in line 6: 6S5Qz S815 24,0
